// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display errors 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "onUpdateSuccess": [Function],
  },
  "html": "
<form class=\\"form-layout\\">
  <!--0-->
  <ul class=\\"errors-panel\\">
    <li>Update password fail</li>
  </ul>
  <!--0-->
  <!--1-->
  <div class=\\"form-group\\">
    <label>Enter your password:</label>
    <input name=\\"pass1\\" type=\\"password\\" autofocus=\\"\\">
  </div>
  <div class=\\"form-group\\">
    <label>Confirm your password:</label>
    <input name=\\"pass2\\" type=\\"password\\">
  </div>
  <!--0-->
  <!--2-->
  <button type=\\"submit\\">
    <!--3-->Update
    <!--4-->
  </button>
  <!--5-->
</form>
<!--0-->
<!--1-->
<!--0-->
",
}
`;

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "directives": Object {
      "EventListener": [Function],
      "UpdateOnEvent": [Function],
      "disabled": [Function],
      "onChangeUpdate": [Function],
      "onInputUpdate": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "onUpdateSuccess": [Function],
  },
  "html": "
<form class=\\"form-layout\\">
  <!--0-->
  <!--0-->
  <!--1-->
  <div class=\\"form-group\\">
    <label>Enter your password:</label>
    <input name=\\"pass1\\" type=\\"password\\" autofocus=\\"\\">
  </div>
  <div class=\\"form-group\\">
    <label>Confirm your password:</label>
    <input name=\\"pass2\\" type=\\"password\\">
  </div>
  <!--0-->
  <!--2-->
  <button type=\\"submit\\">
    <!--3-->Update
    <!--4-->
  </button>
  <!--5-->
</form>
<!--0-->
<!--1-->
<!--0-->
",
}
`;
